--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "swiper": "^12.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animated": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
     "vite": "^7.2.4"
   }
